--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <script></script>
-    <script type="module">
-      import * as all from '/library.js';
-      console.log(all);
-    </script>
+  <body class="hello" style="background-color: black">
+    <button class="click">click</button>
   </body>
+  <script src="script.js"></script>
 </html>
