--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
-  <body class="hello" style="background-color: black">
-    <button class="click">click</button>
+  <body>
+    <img id="test" src="https://codingapple1.github.io/kona.jpg" />
   </body>
   <script src="script.js"></script>
 </html>
