ES6 async/await ex

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
-  <body>
-    <img id="test" src="https://codingapple1.github.io/kona.jpg" />
+  <body style="background-color: black">
+    <button class="btn">button</button>
+    <button class="btn2">button2</button>
   </body>
   <script src="script.js"></script>
 </html>
