ES6 for in/for of

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
-  <body style="background-color: black">
-    <button class="btn">button</button>
-    <button class="btn2">button2</button>
-  </body>
+  <body style="background-color: black"></body>
   <script src="script.js"></script>
 </html>
