--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
-  <body style="background-color: black">
-    <custom-input style="color: white" name="123"></custom-input>
+  <body>
+    <div id="mordor"></div>
   </body>
   <script src="script.js"></script>
 </html>
